updated swagger file, and user login passing all tests
