# swagger.yaml
@@ -78,6 +78,40 @@ paths:
           description: Unexpected error
           schema:
             $ref: '#/definitions/Error'
+  /api/login:
+    post:
+      tags:
+        - User
+      summary: login in to view cart
+      description: |
+        login information for users to update and view cart
+      parameters:
+        - name: username
+          in: query
+          description: The user name for login
+          required: true
+          type: string
+        - name: password
+          in: query
+          description: The password for login in clear text
+          required: true
+          type: string
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            type: string
+          headers:
+            X-Rate-Limit:
+              type: integer
+              format: int32
+              description: calls per hour allowed by the user
+            X-Expires-After:
+              type: string
+              format: date-time
+              description: date in UTC when token expires
+        '400':
+          description: Invalid username/password supplied
   /api/me/cart:
     get:
       summary: all items in a users cart
